css/style.css
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;300;400;600;700&family=Syncopate:wght@400;700&display=swap');
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  position: relative;
  font-family: 'Josefin Sans';
  color: #ebe9e9;
  background-color: #191923;
  overflow-x: hidden;
}

.preloader {
  position: fixed;
  top: 0;
  left: 0;
  background: #191923;
  z-index: 11;
  height: 100%;
  width: 100%;
}
.preloader .green {
  position: relative;
  z-index: 12;
  width: 100%;
  height: 40%;
  /* background: #c2e812; */
  display: flex;
  justify-content: flex-start;
  align-items: flex-end;
}
.preloader .green .layer {
  height: 100%;
  /* width: calc(100% / 0.2); */
  width: 20%;
  border-right: 1px solid #191923;
  background: #c2e812;
}

.preloader .green #loadTime {
  position: absolute;
  bottom: 20px;
  left: 20px;
  font-weight: 700;
  font-size: 10vw;
  color: #191923;
}

.smooth-scroll {
  overflow-x: hidden;
}
a {
  color: #ebe9e9;
  text-decoration: none;
}

nav {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 9;
  padding: 20px;
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

.burger {
  /* font-size: 32px; */
  font-size: clamp(32px, calc(2rem + ((1vw - 3.2px) * 1)), 48px);

  cursor: pointer;
  transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.24);
}
.burger:hover {
  color: #fc440f;
}
.navList {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 10;
  background: #191923;
  height: 100%;
  width: 100%;
  transform: translateX(-100%) scale(0);
  padding: 2vh 0;
  list-style: none;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  flex-direction: column;
  transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.34);
}

.navList::before {
  content: '';
  height: 100%;
  width: 6px;
  position: absolute;
  top: 0;
  left: 2%;
  z-index: 10;
  background: #191923;
}

.open {
  transform: translateX(0) scale(1);
}

.navList li {
  width: 100%;

  /* background: red; */
}
.navList li a {
  padding: 10px 2% 0 5%;
  font-family: 'Syncopate';
  font-weight: 700;
  /* font-size: 94px; */
  /* font-size: clamp(60px, calc(3.75rem + ((1vw - 3.2px) * 2.5)), 100px); */
  font-size: clamp(40px, calc(2.5rem + ((1vw - 3.2px) * 3.75)), 100px);

  text-transform: uppercase;
  overflow-x: hidden;
  background: transparent;
  border-radius: 2px;
  transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.24);
}
.navList li:nth-of-type(2) a {
  padding-left: 16%;
}
.navList li:nth-of-type(3) a {
  padding-left: 32%;
}
.navList li:nth-of-type(4) a {
  padding-left: 48%;
}
.navList li:nth-of-type(5) {
  position: absolute;
  top: 20px;
  right: 40px;
  /* font-size: 42px; */
  font-size: clamp(34px, calc(2.125rem + ((1vw - 3.2px) * 0.5)), 42px);

  cursor: pointer;
  text-align: right;
  transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.24);
}
.navList li:nth-of-type(5):hover {
  color: #fc440f;
}

.navList li a span {
  -webkit-text-fill-color: transparent;
  -ms-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
  text-fill-color: transparent;
  -webkit-text-stroke-width: 1px;
  -webkit-text-stroke-color: #ebe9e9;
  transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.24);
}
.navList li a:hover {
  color: #191923;
  background: #c2e812;
  border-radius: 2px;
}

.navList li a:hover span {
  -webkit-text-stroke-color: #191919;
}

section {
  position: relative;
  min-height: 100vh;
}

#home {
  position: relative;
  z-index: 2;
  min-height: 100vh;
  padding: 0 calc(8vw - 15px);
  display: flex;
  justify-content: flex-start;
  align-items: flex-end;
}

#home header {
  position: relative;
  margin-bottom: 30px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-family: 'Josefin Sans';
  overflow: hidden;
}

#home header h1 {
  font-weight: 700;
  font-size: clamp(45px, calc(2.8125rem + ((1vw - 3.2px) * 8.4375)), 180px);
  letter-spacing: 6px;
  text-transform: uppercase;
}

.fName,
.lName {
  position: relative;
  width: 100%;
  text-align: center;
  overflow: hidden;
}
.fName {
  padding-top: 2px;
}
.lName {
  padding-bottom: 2px;
}

.fed {
  position: relative;
  padding: 0.5em 0.8em 0.2em;
  color: #191923;
  font-weight: 500;
  font-size: clamp(12.5px, calc(0.78125rem + ((1vw - 3.2px) * 2.3438)), 50px);
  letter-spacing: 3px;
  text-transform: uppercase;
  background: #c2e812;
  border-radius: 8px;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
}

.social {
  position: absolute;
  top: 50%;
  right: 4%;
  transform: translate(-4%, -50%);
  height: 200px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}
/* .social::after {
  content: '';
  position: absolute;
  bottom: -40%;
  left: 50%;
  transform: translate(-50%, 40%);
  height: 50%;
  width: 3px;
  background: #fc440f;
  border-radius: 4px;
  overflow-y: hidden;
} */
.socialLine {
  position: absolute;
  bottom: -45%;
  left: 50%;
  transform: translate(-50%, 45%);
  height: 60%;
  width: 3px;
  background: #fc440f;
  border-radius: 4px;
  overflow-y: hidden;
}
.socialLine1 {
  position: absolute;
  bottom: 14px;
  height: 2px;
  width: 100%;
  transform: translateY(-50%), rotate(90deg);
  background: #fc440f;
  border-radius: 4px;
  overflow-y: hidden;
}
.social a {
  position: relative;
  font-size: clamp(24px, calc(1.25rem + ((1vw - 3.2px) * 0.625)), 30px);
  transition: color 300ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
}
.social a:hover {
  color: #c2e812;
}
.social a .socialTip {
  position: absolute;
  left: -17px;
  top: -30px;
  z-index: -1;
  width: 60px;
  padding: 4px 0 3px;
  background: #ebe9e9;
  border-radius: 2px;
  color: #191923;
  font-size: 13px;
  text-align: center;
  visibility: hidden;
}
.social a:hover .socialTip {
  visibility: visible;
  pointer-events: none;
}
/* ... */

